--- a/product.html
+++ b/product.html
@@ -85,6 +85,23 @@
                     <h1 class="section-title position-relative text-center mb-5">Best Prices We Offer For Ice Cream Lovers</h1>
                 </div>
             </div>
+            <!-- search-->
+<div class="container my-4">
+    <input type="text" id="searchInput" class="form-control" placeholder="ค้นหาสินค้า...">
+</div>
+
+<script>
+document.getElementById('searchInput').addEventListener('input', function() {
+    const searchText = this.value.toLowerCase();
+    const products = document.querySelectorAll('.product-item'); // ปรับตาม class ของสินค้า
+    products.forEach(product => {
+        const name = product.textContent.toLowerCase();
+        product.style.display = name.includes(searchText) ? '' : 'none';
+    });
+});
+</script>
+<!-- search end-->
+
             <div class="row">
                 <div class="col-lg-3 col-md-6 mb-4 pb-2">
                     <div class="product-item d-flex flex-column align-items-center text-center bg-light rounded py-5 px-3">
